fix use deprecated method